--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </header>
 
     <!-- Hero -->
-    <section class="hero" style="height: 2000px">
+    <section class="hero">
       <div class="container">
         <div class="hero-row">
           <!-- Hero left -->
@@ -221,5 +221,79 @@
         </div>
       </div>
     </section>
+
+    <!-- Main -->
+    <main style="height: 2000px">
+      <!-- About -->
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <!-- About content -->
+            <section class="about__content">
+              <span class="about__title">// About //</span>
+              <h2 class="about__heading heading">Best Agency For Your Pet.</h2>
+              <p class="about__desc desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="about__list">
+                <!-- Item 1 -->
+                <div class="about__item">
+                  <!-- check icon -->
+                  <div class="about__item-icon"></div>
+                  <span class="about__item-title">Certified Groomer</span>
+                </div>
+                <!-- Item 2 -->
+                <div class="about__item">
+                  <!-- check icon -->
+                  <div class="about__item-icon"></div>
+                  <span class="about__item-title">Animal Lover</span>
+                </div>
+                <!-- Item 3 -->
+                <div class="about__item">
+                  <!-- check icon -->
+                  <div class="about__item-icon"></div>
+                  <span class="about__item-title">14+ Years Experience</span>
+                </div>
+                <!-- Item 4 -->
+                <div class="about__item">
+                  <!-- check icon -->
+                  <div class="about__item-icon"></div>
+                  <span class="about__item-title">Pet Parent Of 3 Dogs</span>
+                </div>
+              </div>
+            </section>
+
+            <!-- About media -->
+            <div class="about__media">
+              <div class="about__info">
+                <img
+                  src="./assets/icon/Union.svg"
+                  alt=""
+                  class="about__info-icon"
+                />
+                <span class="about__info-title">20+</span>
+                <span class="about__info-text">Years Experience</span>
+              </div>
+
+              <div class="about__thumb">
+                <img
+                  src="./assets/image/about-man&cat.png"
+                  alt=""
+                  class="about__img"
+                />
+              </div>
+
+              <!-- decor -->
+              <img
+                class="about__decor"
+                src="./assets/icon/about-decor.svg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
