--- a/index.html
+++ b/index.html
@@ -224,73 +224,165 @@
 
     <!-- Main -->
     <main style="height: 2000px">
-      <!-- About -->
       <section class="about">
         <div class="container">
           <div class="about__inner">
             <!-- About content -->
             <section class="about__content">
-              <span class="about__title">// About //</span>
+              <div class="about__label">// About //</div>
               <h2 class="about__heading heading">Best Agency For Your Pet.</h2>
               <p class="about__desc desc">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
-              <div class="about__list">
-                <!-- Item 1 -->
-                <div class="about__item">
-                  <!-- check icon -->
-                  <div class="about__item-icon"></div>
-                  <span class="about__item-title">Certified Groomer</span>
-                </div>
-                <!-- Item 2 -->
-                <div class="about__item">
-                  <!-- check icon -->
-                  <div class="about__item-icon"></div>
-                  <span class="about__item-title">Animal Lover</span>
-                </div>
-                <!-- Item 3 -->
-                <div class="about__item">
-                  <!-- check icon -->
-                  <div class="about__item-icon"></div>
-                  <span class="about__item-title">14+ Years Experience</span>
-                </div>
-                <!-- Item 4 -->
-                <div class="about__item">
-                  <!-- check icon -->
-                  <div class="about__item-icon"></div>
-                  <span class="about__item-title">Pet Parent Of 3 Dogs</span>
-                </div>
+              <div class="about__checklist">
+                <span class="about__item">Certified Groomer</span>
+                <span class="about__item">Animal Lover</span>
+                <span class="about__item">14+ Years Experience</span>
+                <span class="about__item">Pet Parent Of 3 Dogs</span>
               </div>
             </section>
 
             <!-- About media -->
             <div class="about__media">
               <div class="about__info">
+                <span class="about__title">20+</span>
+                <span class="about__text">Years Experience</span>
                 <img
-                  src="./assets/icon/Union.svg"
+                  src="./assets/icon/decor-cat-feet.png"
                   alt=""
-                  class="about__info-icon"
+                  class="about__info-decor"
                 />
-                <span class="about__info-title">20+</span>
-                <span class="about__info-text">Years Experience</span>
               </div>
 
-              <div class="about__thumb">
+              <figure class="about__wrap-image">
                 <img
                   src="./assets/image/about-man&cat.png"
                   alt=""
-                  class="about__img"
+                  class="about__image"
+                />
+              </figure>
+              <!-- Decor -->
+              <img
+                src="./assets/icon/about-decor.svg"
+                alt=""
+                class="about__media-decor"
+              />
+            </div>
+
+            <!-- About media -->
+            <div class="about__media">
+              <div class="about__wrap-image-bottom">
+                <img
+                  src="./assets/image/vacation-dog.png"
+                  alt=""
+                  class="about__image-bottom"
                 />
               </div>
 
-              <!-- decor -->
+              <!-- Decor -->
               <img
-                class="about__decor"
-                src="./assets/icon/about-decor.svg"
+                src="./assets/icon/decor~white.svg"
                 alt=""
+                class="about__decor-bottom"
+              />
+              <img
+                src="./assets/icon/decor~brown.svg"
+                alt=""
+                class="about__decor-bottom"
+              />
+              <img
+                src="./assets/icon/decor~organge.svg"
+                alt=""
+                class="about__decor-bottom"
+              />
+              <img
+                src="./assets/icon/decor-triangle-blue.svg"
+                alt=""
+                class="about__decor-bottom"
+              />
+              <img
+                src="./assets/icon/decor-triangle-white.svg"
+                alt=""
+                class="about__decor-bottom"
+              />
+              <img
+                src="./assets/icon/decor-circle-small.svg"
+                alt=""
+                class="about__decor-bottom"
               />
             </div>
+
+            <!-- About content -->
+            <section class="about__content">
+              <h2 class="about__heading-bottom heading">
+                Taking A Vacation? So Is Your Pet.
+              </h2>
+              <p class="about__desc-bottom desc">
+                We offer long-term and short-term boarding. Every dog has its
+                own private, spacious room and daily individual time in our
+                large play yard.
+              </p>
+              <!-- Tag list -->
+              <div class="tag">
+                <ul class="tag__list">
+                  <!-- Item 1 -->
+                  <li class="tag__item tag__item--active">
+                    <img
+                      src="./assets/icon/pet-boarding.png"
+                      alt=""
+                      class="tag__icon"
+                    />
+                    <span class="tag__title">Pet Boarding</span>
+                  </li>
+                  <!-- Item 2 -->
+                  <li class="tag__item">
+                    <img
+                      src="./assets/icon/pet-daycare.png"
+                      alt=""
+                      class="tag__icon"
+                    />
+                    <span class="tag__title">Pet Daycare</span>
+                  </li>
+                  <!-- Item 3 -->
+                  <li class="tag__item">
+                    <img
+                      src="./assets/icon/pet-transport.png"
+                      alt=""
+                      class="tag__icon"
+                    />
+                    <span class="tag__title">Pet Transport</span>
+                  </li>
+                </ul>
+
+                <div class="tag__content">
+                  <!-- Content 1 -->
+                  <div class="tag__content-item tag__content-item--active">
+                    <p class="tag__content-desc">
+                      While you're on holiday, here's where your furry friends
+                      will spend their time 1.
+                    </p>
+                    <a href="#!" class="tag__content-more">View more</a>
+                  </div>
+                  <!-- Content 2 -->
+                  <div class="tag__content-item">
+                    <p class="tag__content-desc">
+                      While you're on holiday, here's where your furry friends
+                      will spend their time 2.
+                    </p>
+                    <a href="#!" class="tag__content-more">View more</a>
+                  </div>
+                  <!-- Content 3 -->
+                  <div class="tag__content-item">
+                    <p class="tag__content-desc">
+                      While you're on holiday, here's where your furry friends
+                      will spend their time 3.
+                    </p>
+                    <a href="#!" class="tag__content-more">View more</a>
+                  </div>
+                </div>
+              </div>
+            </section>
           </div>
         </div>
       </section>
